# durak

./: .gitignore  CMakeLists.txt  dealer.h  dealer.lib  main.cpp  player.cpp  player.h
doc/: Makefile  durak.docx  kr_req.docx  report.tex
